077 ==> 274046 - jpeg-turbo support : can't edit canon 400D jpg.
078 ==> 307213 - No Kipi plugin installed - FindKipi.cmake script from KDElibs must be updated.
079 ==> 266395 - Batch cropping for digikam (cropping made easy).
080 ==> 150854 - Massive common crop feature.
081 ==> 302024 - Batch image cropping tool.
082 ==> 147428 - Batch resizing for several folders.
083 ==> 112777 - New batch plugin to change image size.
084 ==> 115473 - Missing Feature in Batch Section: Gamma factor.
085 ==> 312332 - digiKam don't save rename pattern when using regex.
086 ==> 312433 - Extension Based Subalbums are not created.
087 ==> 312419 - Internationalization: digiKam in English only.
088 ==> 221940 - Automatic subtag search while tagging.
089 ==> 266204 - Inconsistent results with distortion correction between digiKam, lensfun tool (tmod) and ufraw.
090 ==> 267613 - Lensfun doesn't work correctly with compact cameras.
091 ==> 284708 - Lens Autocorrection overcompensates distortion.
092 ==> 253941 - Auto lens correction not working correctly.
093 ==> 281783 - Auto lens correction doesn't use correct parameters.
094 ==> 312764 - Crop factor always set to -1.0 in lens correction [patch].
095 ==> 312765 - Crop factor is being used as scale factor [patch].
096 ==> 312766 - digiKam uses lens crop factor, not camera's [patch].
097 ==> 261079 - Crash of Enhance->Lens->Auto-Correction.
098 ==> 184156 - Showfoto lensfun select wrong lens.
099 ==> 312627 - Cannot create a new album in root "My Albums".
100 ==> 312848 - digiKam 3.0.0-rc win32 installer.
101 ==> 307750 - No path to mysqld set in server configuration [patch].
102 ==> 312892 - digiKam crashed while scanning big collection on external UAB HDD.
103 ==> 308948 - Pictures belonging to a group can't be displayed in the light table window.
104 ==> 307223 - Group selected by time not grouping one pair per album.
105 ==> 309254 - Contact informations from template aren't written to xmp-tags of jpg-files.
106 ==> 
